<resources>
    <string name="app_name">TVARIAU</string>
    <string-array name="diet_array">
        <item>Visavalgis</item>
        <item>Vegetaras</item>
        <item>Veganas</item>
    </string-array>

    <string-array name="transport_array">
        <item>Automobilis</item>
        <item>Viešasis transportas</item>
        <item>Dviratis</item>
        <item>Pėsčiomis</item>
    </string-array>
    <string name="facebook_app_id">281581640125153</string>
    <string name="semicolonAndEnter">: \n</string>
    <string name="semicolon">: </string>
    <string name="lunchTime">Pietų laikas</string>
    <string name="dinnerTime">Vakarienės laikas</string>
    <string name="sleepingTime">Miego laikas</string>
    <string name="food">Mityba</string>
    <string name="transport">Transportas</string>
    <string name="energy">Būstas</string>
    <string name="total">Iš viso: </string>
    <string name="points"> taškai</string>
    <string name="badges">Ženkleliai: </string>
    <string name="categoryOfTheWeek">Šios savaitės kategorija - </string>
    <string name="place">Vieta</string>
    <string name="photo">Nuotrauka</string>
    <string name="username">Vartotojo vardas</string>
    <string name="inThisCategory">🌿🌿🌿 Šioje kategorijoje jūs užimate </string>
    <string name="usersPlace">vietą! 🌿🌿🌿</string>
    <string name="login">Prisijungimas</string>
    <string name="toLogin">Prisijungti</string>
    <string name="toRegister">Užsiregistruoti</string>
    <string name="password">Slaptažodis</string>
    <string name="usernamePlaceholder">vartotojas3</string>
    <string name="passwordPlaceholder">123456aZ*</string>
    <string name="firstName">Vardas</string>
    <string name="lastName">Pavardė</string>
    <string name="breakfastTime">Pusryčių laikas</string>
    <string name="repeatPassword">Pakartokite slaptažodį</string>
    <string name="wakingUpTime">Atsibudimo laikas</string>
    <string name="register">Registracija</string>
    <string name="backToLogin">Grįžti į prisijungimo langą</string>
    <string name="firstNamePlaceholder">Laura</string>
    <string name="lastNamePlaceholder">Lauraitė</string>
    <string name="usernamePlaceholderRegister">vartotojas123</string>
    <string name="allResults">Visų rezultatai</string>
    <string name="totalCategory">Bendra</string>
    <string name="transportForTable">Trans- portas</string>
    <string name="profileInformation">Profilio informacija</string>
    <string name="save">Saugoti</string>
    <string name="energyAction">Būsto užduotys</string>
    <string name="todayIUsedWater">Šiandien maudžiausi: </string>
    <string name="didNotUseWater">🌿🌿🌿🌿Nesimaudžiau</string>
    <string name="shower">🌿🌿🌿duše</string>
    <string name="zero">0</string>
    <string name="minutes">min</string>
    <string name="seconds">s</string>
    <string name="showerPoints">(🌿🌿🌿 mažiau nei 5 min, \n🌿🌿 5–10 min, 🌿 10 min ir daugiau)</string>
    <string name="bath">🌿vonioje</string>
    <string name="todayITurnOff">Šiandien prieš einant miegot išjungiu</string>
    <string name="devicesPoints">(el. prietaisų iš elektros lizdo \n \n (🌿1–5, 🌿🌿6–9, 🌿🌿🌿10 ir daugiau)</string>
    <string name="leafExplanation">____________ \n Kuo daugiau 🌿 turi veikla, tuo ji tvaresnė. \n</string>
    <string name="factOfTheDay">Dienos faktas</string>
    <string name="goToTasks">Peržiūrėti šiandienos užduotis</string>
    <string name="foodAction">Mitybos užduotys</string>
    <string name="forBreakfastIAte">Pusryčiams valgiau:</string>
    <string name="forLunchIAte">Pietums valgiau:</string>
    <string name="forDinnerIAte">Vakarienei valgiau:</string>
    <string name="vegan">🌿🌿🌿🌿Veganiškai (jokios mėsos, žuvies, pieno produktų ir kiaušinių)</string>
    <string name="vegetarian">🌿🌿🌿Vegetariškai (jokios mėsos ir žuvies)</string>
    <string name="meatWithLessCO2">🌿🌿Mažiau taršos išskiriančios mėsos: vištiena, kiauliena, kalakutiena, žuvis</string>
    <string name="meat">🌿Daugiau taršos išskiriančios mėsos: jautina, ėriena, aviena, krevetės</string>
    <string name="myResults">Mano rezultatai</string>
    <string name="share">Dalintis facebook\'e</string>
    <string name="noDataYet">Šioje kategorijoje dar neturite duomenų</string>
    <string name="foodForPoints">Mityba: </string>
    <string name="energyForPoints">Būstas: </string>
    <string name="transportForPoints">Transportas: </string>
    <string name="change">Keisti</string>
    <string name="tasks">Užduotys</string>
    <string name="categoryNotChosen">Savaitės kategorija dar nepasirinkta, norėdami pasirinkti, spauskite mygtuką</string>
    <string name="chooseCategory">Savaitės kategorijos pasirinkimas</string>
    <string name="wheel">Ratas</string>
    <string name="spinWheelForCategory">Norint gauti tvarios veiklos kategoriją, spauskite mygtuką</string>
    <string name="spinTheWheel">Sukti ratą</string>
    <string name="transportAction">Transporto užduotys</string>
    <string name="todayITravelled">Šiandien keliavau:</string>
    <string name="didNotTravel">🌿🌿🌿🌿Nekeliavau</string>
    <string name="byFoot">🌿🌿🌿🌿Pėsčiomis</string>
    <string name="kilometers">km</string>
    <string name="byBike">🌿🌿🌿🌿Dviračiu</string>
    <string name="byPublicTransport">🌿🌿🌿Viešuoju transportu</string>
    <string name="buyCar">🌿Automobiliu</string>
    <string name="fromWhich">🌿🌿Iš kurių</string>
    <string name="gaveALift">🌿🌿pavežiau</string>
    <string name="people">žmones</string>
    <string name="logout">Atsijungti</string>
    <string name="profile">Profilis</string>
    <string name="info">Informacija</string>
    <string name="infoWheel">Norėdami pildyti savaitės užduotis, \n turite nueiti į langą RATAS ir gauti \n savaitės kategoriją. \n</string>
    <string name="infoTasks">Turint savaitės kategorija, atsidarykite \n langą UŽDUOTYS, kuriame galite \n užpildyti savaitės kategorijos užduotis.\n</string>
    <string name="infoSave">Įvedus informaciją, paspauskite \n mygtuką SAUGOTI.\n</string>
    <string name="infoLeaves">🌿🌿🌿🌿🌿</string>
    <string name="infoMotivate">Valio! Jūsų rezultatai išsaugoti! \n Džiaugiamės, kad jums rūpi \n mūsų planeta!</string>
</resources>