<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.MyResultsFragment">

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical"
            tools:ignore="ScrollViewSize">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="100dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:text="@string/myResults"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="30sp" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="76dp">

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/all_tab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/totalCategory" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/food_tab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/food" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/transport_tab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/transportForTable" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/energy_tab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/energy" />
            </com.google.android.material.tabs.TabLayout>

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="129dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image_iv"
                    android:layout_width="300px"
                    android:layout_height="300px"
                    tools:src="@tools:sample/avatars"
                    tools:ignore="ContentDescription,PxUsage" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingStart="20dp"
                    android:paddingBottom="15dp"
                    tools:ignore="RtlSymmetry">


                    <TextView
                        android:id="@+id/username2_tv"
                        android:layout_width="match_parent"
                        android:layout_height="65dp"
                        android:layout_weight="1"
                        android:paddingStart="20dp"
                        android:text="@string/username"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        tools:ignore="InefficientWeight" />

                    <Button
                        android:id="@+id/share_b"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/roundcorner"
                        android:text="@string/share" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/empty_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/noData_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/noDataYet"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:visibility="invisible"
                tools:visibility="visible" />

            <com.jjoe64.graphview.GraphView
                android:id="@+id/graph"
                android:layout_width="match_parent"
                android:layout_height="200dip"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/food_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/foodForPoints"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/transport2_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/transportForPoints"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/energy_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/energyForPoints"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/total_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/badges_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/badges"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="100dp" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>