<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.InfoFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:textAlignment="center"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        tools:ignore="UselessParent">
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="100dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:text="@string/info"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_pie_chart_24"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:text="@string/infoWheel"
                    android:textColor="@color/black"
                    tools:ignore="RtlSymmetry" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:src="@drawable/ic_baseline_assignment_turned_in_24"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/textView24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:text="@string/infoTasks"
                    android:textColor="@color/black"
                    tools:ignore="RtlSymmetry" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/button2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView26"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingStart="10dp"
                    android:text="@string/infoSave"
                    android:textColor="@color/black"
                    tools:ignore="RtlSymmetry" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textView27"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/infoLeaves"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/textView23"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:text="@string/infoMotivate"
                    android:textColor="@color/black"
                    tools:ignore="RtlSymmetry" />
            </TableRow>
        </TableLayout>

    </LinearLayout>

</FrameLayout>