<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingEnd="10dp"
    android:paddingStart="10dp"
    tools:context=".views.RegisterActivity"
    android:id="@+id/scrollView"

    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:fillViewport="true"
    android:scrollbars="vertical">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.RegisterActivity"
    tools:ignore="ScrollViewSize">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/firstName_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="30dp"
                android:text="@string/firstName"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/firstName_et"
                android:layout_width="181dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/firstNamePlaceholder"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lastName_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="30dp"
                android:text="@string/lastName"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/lastName_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/lastNamePlaceholder"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/username_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="30dp"
                android:text="@string/username"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/username_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/usernamePlaceholderRegister"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:paddingStart="30dp"
                android:text="@string/photo"
                tools:ignore="RtlSymmetry" />

            <ImageButton
                android:id="@+id/image_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:src="@drawable/ic_baseline_add_photo_alternate_24"
                android:tint="#FFFFFF"
                android:background="@drawable/roundcorner"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="-30" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="100" />

            <ImageView
                android:id="@+id/photo_iv"
                android:layout_width="300px"
                android:layout_height="300px"
                android:layout_weight="-8"
                android:src="@android:drawable/gallery_thumb"
                app:srcCompat="@drawable/ic_launcher_background"
                tools:ignore="ContentDescription,PxUsage" />
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/breakfastTime_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="30dp"
                android:shadowColor="#FFFFFF"
                android:text="@string/breakfastTime"
                tools:ignore="RtlSymmetry" />

            <TimePicker
                android:id="@+id/breakfast_dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:timePickerMode="spinner"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/lunchTime_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="30dp"
                android:text="@string/lunchTime"
                tools:ignore="RtlSymmetry" />

            <TimePicker
                android:id="@+id/lunch_dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:timePickerMode="spinner"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/dinnerTime_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="30dp"
                android:text="@string/dinnerTime"
                tools:ignore="RtlSymmetry" />

            <TimePicker
                android:id="@+id/dinner_dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:timePickerMode="spinner"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/wakingUpTime_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="30dp"
                android:text="@string/wakingUpTime"
                tools:ignore="RtlSymmetry" />

            <TimePicker
                android:id="@+id/wakingUpTime_dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:timePickerMode="spinner"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/sleepingTime_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="30dp"
                android:text="@string/sleepingTime"
                tools:ignore="RtlSymmetry" />

            <TimePicker
                android:id="@+id/sleepingTime_dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:timePickerMode="spinner"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/password1_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="30dp"
                android:text="@string/password"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/password1_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:text="@string/passwordPlaceholder"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/password2_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="30dp"
                android:text="@string/repeatPassword"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/password2_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:text="@string/passwordPlaceholder"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/register_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/roundcorner"
                android:onClick="registerUser"
                android:text="@string/toRegister"
                android:textSize="18sp" />

        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/title2"
        android:layout_width="408dp"
        android:layout_height="150dp"
        android:layout_marginBottom="14dp"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/registracija"
        android:layout_width="214dp"
        android:layout_height="32dp"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.661" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:onClick="openLoginActivity"
        android:text="@string/backToLogin"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registracija" />

</androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>