<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.AllResultsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="100dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:text="@string/allResults"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp" />
        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="76dp">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/all_res_all_tab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/totalCategory"/>

            <com.google.android.material.tabs.TabItem
                android:id="@+id/all_res_food_tab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/all_res_transport_tab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transportForTable" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/all_res_energy_tab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/energy" />
        </com.google.android.material.tabs.TabLayout>

        <TextView
            android:id="@+id/textView18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/user_place_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <TableLayout
                android:id="@+id/main_table"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="0dp"
                android:stretchColumns="*"
                tools:ignore="ScrollViewSize">
            </TableLayout>
        </ScrollView>
    </LinearLayout>

</FrameLayout>